# con4

./: .gitignore  AUTHORS  Board.cpp  Board.h  COPYING  DoublyLinkedList.h  DynamicArrayList.h  List.h  Makefile  README  Test.cpp  con4.pro  configure  configure.ac  doublyLinkedList.h  dynamicArrayList.h  list.cpp  list.h
data/: con4.in
samples/: Makefile  echo_client.cpp  main.cpp  resp  socket  socket.pro
src/con4/: addindexserverdialog.cpp  addindexserverdialog.h  addindexserverdialog.ui  aiplayer.cpp  aiplayer.h  aiplayerinfo.cpp  aiplayerinfo.h  application.cpp  application.h  board.cpp  board.h  boardconf.cpp  boardconf.h  boardconf.ui  boardconfview.cpp  boardconfview.h  boardconfview.ui  colorbutton.cpp  colorbutton.h  con4.pri  con4.pro  con4globals.h  game.cpp  game.h  gameconfview.cpp  gameconfview.h  gameconfview.ui  gamehost.cpp  gamehost.h  gameinterface.cpp  gameinterface.h  indexserversview.cpp  indexserversview.h  indexserversview.ui  indexserversviewmodel.cpp  indexserversviewmodel.h  indexservice.cpp  indexservice.cpp.autosave  indexservice.h  indexservice.h.autosave  (+61 more)
src/con4core/: board.cpp  board.h  con4core.pro  game.cpp  game.h  main.cpp  player.cpp  player.h  settings.cpp  settings.h
src/con4gl/: boardconf.cpp  boardconf.h  boardview.cpp  boardview.h  boardview.ui  con4gl.pro  disks.cpp  disks.h  glelement.cpp  glelement.h  glwidget.cpp  glwidget.h  grid.cpp  grid.h  main.cpp
src/con4net/: clientendpoint.cpp  clientendpoint.h  clientendpointhelper.cpp  clientendpointhelper.h  con4net.pro  con4netglobals.h  endpoint.cpp  endpoint.h  (+40 more)
(+19 files in other folders)
